--- a/_config.yml
+++ b/_config.yml
@@ -9,24 +9,24 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Asia/Ulaanbaatar
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Gonchigsumlaa # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: A text-focused Blog # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Odoohondo yamar heregteig ni medehgui l bn hha.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://Gonchig0930.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: Gonchig0930 # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
@@ -34,14 +34,14 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Gonchigsumlaa Bayarbat
+  email: Gonchig0930@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://github.com/gonchig0930 # change to your GitHub homepage
     # Uncomment below to add more social links
-    # - https://www.facebook.com/username
+    - https://www.facebook.com/bayaraa.gonchigoo
     # - https://www.linkedin.com/in/username
 
 # Site Verification Settings
