--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,4 +1,4 @@
 Gonchig:
   name: Gonchigsumlaa Bayarbat
   twitter: <twitter_of_author>
-  url: <homepage_of_author>
+  url: https://gonchigsumlaa.space
