--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone: Asia/Ulaanbaatar
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Gonchigsumla # the main title
+title: Gonchigsumlaa # the main title
 
-tagline: A text-focused Blog # it will display as the subtitle
+tagline: Turshiltiin blog # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   Odoohondo yamar heregteig ni medehgui l bn hha.
